fix code actions

BUG: 458554